# Hackathon-SSD-2024

./: .env  .env.example  .gitignore  LICENSE  README.md  alembic.ini  dfaja  docker-compose.yml  index.html  mypy.ini  nginx.conf  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: run.yml
api/: api_connection.py  api_connetion.py  api_vks.py  main.py
assets/: index-7jRD5Oad.js  index-BIxybgfJ.js  index-BxM6Ss9Z.js  index-C3xf4t8s.js  index-CSP6QsEN.js  index-Cd7ehS1X.css  index-DBnaOKpv.js  index-DPYLX5MU.js  index-DQtFIUiF.js  index-DW9Bohfm.js  index-DY4cO96b.js  index-Dr2YHIgg.css  index-DvRN4fhE.js  index-FrMf3SqC.js  index-HJ3OcLKG.js  index-qFy4ZiK9.js
bot/: Dockerfile  __main__.py
bot/callbacks/: authorization.py  back_menu.py  client.py  create_vcc.py  get_vcc.py  logout.py  menu.py  profile.py  state.py  universal.py  view_vks.py
bot/core/: enums.py  factories.py  setting.py
bot/core/api/: api_vks.py  main.py  tests.py
bot/core/models/: __init__.py  base.py  user.py
bot/core/repositories/: abc_meta.py  user.py
bot/core/services/: user.py
bot/core/states/: auth.py  get_vcc.py
bot/core/utils/: enums.py  get_vcc.py  jwt.py  utils.py
bot/filters/: role.py
bot/handlers/: __init__.py
bot/handlers/Client/: __init__.py
bot/handlers/Client/authorization/: auth_users.py
bot/handlers/Client/profile/: profile.py
bot/handlers/authorization/: auth_users.py
bot/handlers/back_menu/: back_menu.py
bot/handlers/create_vcc/: create_vcc.py  formulations.py  router.py  state.py
bot/handlers/create_vcc/handlers/: __init__.py  base_data.py  check_data.py  cisco.py  external.py  participants.py  room.py  vinteo.py
bot/handlers/get_vcc/: filters.py  formulations.py  main.py  pagination.py  router.py  start.py  utils.py
bot/handlers/get_vcc/filters/: __init__.py  cancel.py  department.py  filters.py  name.py  priority.py  state.py  user.py
bot/handlers/get_vcc/pagination/: pagination.py
bot/handlers/logout/: logout.py
bot/handlers/main_menu/: main_menu.py
bot/handlers/menu/: formulations.py  main_menu.py
bot/handlers/profile/: formulations.py  profile.py
bot/handlers/start/: formulations.py  start.py
bot/handlers/view_vks/: view_vks.py
bot/keyboards/: create_vcc.py  get_vcc.py  main_menu.py  paginate.py  profile.py  start.py  universal.py
bot/keyboards/client/: start.py
bot/middlewares/: __init__.py  base_information.py
bot/middlewares/inner/: check_auth.py
bot/middlewares/outer/: __init__.py  database.py  jwt_.py  logging.py  save_users_id.py  service.py  throttling.py  user_context.py
bot/middlewares/request/: retry.py
bot/utils/: utils.py
database/: main.py  session.py  settings.py
database/models/: __init__.py  base.py  users.py
database/repositories/: __init__.py  user_repo.py
database/schemas/: __init__.py  users.py
frontend/: index.html  package.json  vite.config.ts
frontend 2/src/: App.tsx  layout.tsx  telegram.d.ts
frontend 2/src/components/: app-sidebar.tsx
frontend 2/src/components/Filter/: BuildingsList.tsx
frontend 2/src/components/Meetings/: MeetingFilter.tsx
frontend 2/src/pages/: CreateMeetingPage.tsx  LoginPage.tsx  MeetingsPage.tsx
frontend 2/src/services/: AuthService.ts  UserService.ts
frontend 2/src/types/: Meetings.ts
frontend 2/src/utils/: decodeToken.ts
frontend/src/: App.tsx  index.css  layout.tsx  main.tsx
frontend/src/components/: Breadcrumbs.tsx  app-sidebar.tsx  mode-toggle.tsx  theme-provider.tsx
frontend/src/components/Events/: EventCard.tsx
frontend/src/components/Filter/: BuildingsList.tsx
frontend/src/components/Meetings/: MeetingCard.tsx  MeetingFilter.tsx  Pagination.tsx
frontend/src/components/Profile/: ProfileDetails.tsx
frontend/src/guards/: ProtectedRoute.tsx
frontend/src/helpers/: jwtHelpers.ts
frontend/src/hooks/: useMeetings.tsx
frontend/src/http/: index.ts
frontend/src/pages/: CreateEventPage.tsx  CreateMeetingPage.tsx  DetailsMeetingPage.tsx  EventsPage.tsx  LoginPage.tsx  MeetingDetailsPage.tsx  MeetingsPage.tsx  NotFoundPage.tsx  ProfilePage.tsx  QuestionsPage.tsx  UserMeetingsPage.tsx
frontend/src/pages/auth/: LoginPage.tsx
frontend/src/pages/meetings/: CreateMeetingPage.tsx  DetailsMeetingPage.tsx  MeetingsPage.tsx  UserMeetingsPage.tsx
frontend/src/pages/profile/: ProfilePage.tsx
frontend/src/services/: AuthService.ts  EventService.ts  MeetingService.ts  UserService.ts
frontend/src/types/: Events.ts  Meetings.ts  User.ts
frontend/src/types/auth/: Auth.ts
frontend/src/types/user/: User.ts
frontend/src/utils/: decodeToken.ts
migrations/: Dockerfile  env.py
migrations/versions/: 2024_11_24_21_24_users.py  2024_11_25_12_28_.py  2024_11_25_12_41_.py  2024_11_26_18_47_.py  2024_11_26_18_53_.py  2024_11_26_18_54_.py  2024_11_28_00_33_.py  2024_11_28_02_28_.py  2024_11_28_11_36_.py
scheduler/: Dockerfile
webapp/: __main__.py  application.py
webapp/backend/: Dockerfile  __init__.py  __main__.py  application.py
webapp/backend/users/: __init__.py  test.py  users.py
webapp/frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
webapp/frontend/src/: telegram.d.ts
webapp/frontend/src/components/: app-sidebar.tsx
webapp/frontend/src/hooks/: useMeetings.ts
webapp/frontend/src/layouts/: layout.tsx
(+17 files in other folders)
