[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["prog.smookki <medved3loy@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
aiogram = "^3.15.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
apscheduler = "^3.10.4"
uvicorn = "^0.32.1"
ruff = "^0.8.0"
mypy = "^1.13.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
