[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["prog.smookki <medved3loy@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
aiogram = "^3.15.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
apscheduler = "^3.10.4"
uvicorn = "^0.32.1"
ruff = "^0.8.0"
mypy = "^1.13.0"
asyncpg = "^0.30.0"
httpx = "^0.27.2"
cachetools = "^5.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "C",
  "C4",
  "E",
  "F",
  "T10",
  "T20",
  "Q",
  "RET",
]
ignore = [
  "F401",
  "E501",
  "C901",
  "RET503",
]
exclude = [
  ".git",
  "build",
  "dist",
  "venv",
  ".venv",
  "docs",
  "dev",
  "scripts",
  "*.egg-info",
]
fixable = ["ALL"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
include_trailing_comma = true
multi_line_output = 3
skip = ["node_modules", ".venv", "build"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
